@@ -1,3 +1,6 @@
+recent:
+	fix iptables log message format (append a space)
+
 0.11:
 	fixed non-working example in filter_syntax man page
 	fix 64-bit warning in filter.c netmask calculation
@@ -84,4 +87,4 @@
 	iptables driver
 	a few bugs
 
-$Id: HISTORY,v 1.47 2002/11/13 10:01:43 matthew Exp $
+$Id: HISTORY,v 1.48 2003/04/02 11:06:49 matthew Exp $
